<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.fraunhofer.iosb.ilt.faaast.service</groupId>
    <artifactId>service</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <organization>
        <name>Fraunhofer IOSB</name>
        <url>http://iosb.fraunhofer.de</url>
    </organization>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <modules>
        <module>core</module>
        <module>model</module>
        <!-- needs to be build separately because of proprietary dependency to prosys -->
        <!--<module>endpoint/opcua-prosys</module>-->
        <module>endpoint/http</module>
        <module>messagebus/messagebus-internal</module>
        <module>persistence/persistence-inmemory</module>
        <module>assetconnection/mqtt</module>
        <module>assetconnection/opcua</module>
        <module>serialization/core</module>
        <module>serialization/json</module>
    </modules>
    <properties>
        <aas.version>1.2.0</aas.version>
        <classgraph.version>4.8.137</classgraph.version>
        <flatten.version>1.2.7</flatten.version>
        <guava.version>31.0.1-jre</guava.version>
        <jackson.version>2.13.0</jackson.version>
        <jsonassert.version>1.5.0</jsonassert.version>
        <junit.version>4.13.2</junit.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <milo.version>0.6.3</milo.version>
        <mockito.version>4.1.0</mockito.version>
        <jsonpath.version>2.6.0</jsonpath.version>
        <paho.version>1.2.5</paho.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>1.0.0-SNAPSHOT</revision>
        <root.basedir>${project.basedir}</root.basedir>
        <slf4j.version>1.7.32</slf4j.version>
        <spotless.version>2.17.3</spotless.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten.version}</version>
                <configuration></configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                        <phase>process-resources</phase>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                        <phase>clean</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <formats>
                        <format>
                            <includes>
                                <include>codestyle/*.xml</include>
                            </includes>
                            <eclipseWtp>
                                <type>XML</type>
                                <files>
                                    <file>${root.basedir}/codestyle/xml.prefs</file>
                                </files>
                            </eclipseWtp>
                        </format>
                        <format>
                            <includes>
                                <include>*.md</include>
                                <include>.gitignore</include>
                            </includes>
                            <trimTrailingWhitespace></trimTrailingWhitespace>
                            <endWithNewline></endWithNewline>
                            <indent>
                                <tabs>true</tabs>
                                <spacesPerTab>4</spacesPerTab>
                            </indent>
                        </format>
                    </formats>
                    <pom>
                        <includes>
                            <include>**/pom.xml</include>
                        </includes>
                        <sortPom>
                            <keepBlankLines>false</keepBlankLines>
                            <nrOfIndentSpace>4</nrOfIndentSpace>
                            <sortDependencies>groupId,artifactId</sortDependencies>
                            <sortProperties>true</sortProperties>
                        </sortPom>
                    </pom>
                    <java>
                        <includes>
                            <include>src/main/java/**/*.java</include>
                            <include>src/test/java/**/*.java</include>
                        </includes>
                        <importOrder></importOrder>
                        <removeUnusedImports></removeUnusedImports>
                        <licenseHeader>
                            <file>${root.basedir}/license-header</file>
                        </licenseHeader>
                        <eclipse>
                            <version>4.13.0</version>
                            <file>${root.basedir}/codestyle/formatter.xml</file>
                        </eclipse>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
